[package]
name = "minecraft_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.0"
winit = "0.30.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[lib]
crate-type = ["cdylib", "rlib"]
